# DIYAgent

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt
agents/: README.md  __init__.py  emailer.py  model_settings.py  planner.py  schemas.py  search.py  writer.py
api/: README.md  __init__.py  main.py
config/: README.md  __init__.py  settings.py
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.css  App.tsx  api.ts  index.css  types.ts
frontend/src/components/: Hero.tsx  icons.tsx  (+2 more)
guards/: README.md  __init__.py  input_guard.py  llm_input_guard.py  llm_output_guard.py  output_guard.py  schemas.py
models/: __init__.py  report_payload.py  types.py
orchestrator/: README.md  __init__.py  pipeline.py  status.py
scripts/: README.md  dev.ps1  dev.sh  e2e_probe.py
templates/: __init__.py  email.html.j2  report.md.j2
tests/: README.md  __init__.py  test_async.py
tests/integration/: test_api.py  test_e2e_probe.py  test_pipeline.py  test_pipeline_guards.py
tests/unit/: test_email_branding.py  test_email_links.py  test_emailer.py  test_emailer_rendering.py  test_guard_links_toc.py  test_llm_input_guard.py  test_llm_output_guard.py  test_openai_tracing_raw.py  test_pipeline.py  test_pipeline_products.py  test_planner.py  test_search.py  test_search_payload.py  test_search_products.py  test_writer.py  test_writer_ki_control.py  test_writer_no_placeholders.py  test_writer_sections.py
util/: README.md  __init__.py  openai_response.py  openai_tracing.py  url_sanitizer.py
